--- a/index.Rmd
+++ b/index.Rmd
@@ -4,15 +4,15 @@ description: |
 site: distill::distill_website
 ---
 
-<img src="img/me_paris_medium.jpeg" alt="a picture of myself smiling in front of an old blue wooden gate" width="200" align='center'/> 
+<img src="img/me_paris_medium.jpeg" alt="a picture of myself, dark blond hair with a fringe, wearing a black sweater with pink motifs and smiling in front of an old, blue wooden gate" width="200" align='center'/> 
 
-<p> I am a third year PhD Student in the <b> Department of Statistics </b> at <a href = 'https://www.stat.uci.edu/' target="_blank"> <b> UC Irvine </b> </a>. </p>
+<p> I am a third year PhD candidate in the <b> Department of Statistics </b> at the <a href = 'https://www.stat.uci.edu/' target="_blank"> <b> University of California Irvine </b> </a>. </p>
 
-<p> I am currently working on a dissertation proposal in Bayesian Nonparametrics, under the supervision of <a href="https://www.ics.uci.edu/~sudderth/"> <b> Erik Sudderth </b> </a> and <a href ="https://www.micheleguindani.info/" > <b> Michele Guindani </b>. </a> </p>
+<p> My PhD research focuses on <b> Bayesian Nonparametric </b> models and I am jointly advised by <a href="https://www.ics.uci.edu/~sudderth/"> <b> Erik Sudderth </b> </a> and <a href ="https://www.micheleguindani.info/" > <b> Michele Guindani </b>. </a> I am interested in the analysis of network data, in classification tasks and recommendation systems. </p> 
 
-<p> I am interested in applications of statistics to classification tasks, network analysis and recommendation systems. I also enjoy working on projects related to statistical education. </p> 
+<p> I enjoy working on projects related to <b> statistics and data science education </b> and I have created the R package <a href="https://federicazoe.github.io/gradetools/"> gradetools </a> to assist data science teachers with grading and providing feedback to their students. </p>
 
-<p> I love learning about other cultures and traveling. </p>
+<p> I have many interests besides statistics, among which hiking and camping, learning about other cultures and traveling. </p>
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE)
