--- a/research.Rmd
+++ b/research.Rmd
@@ -14,36 +14,115 @@ knitr::opts_chunk$set(echo = TRUE)
 ### Research Interests
 
 
-<p> I am interested in the development and application of Bayesian Nonparametric models, especially for clustering, analysis of time series and for the modeling of network data. My first research project, under the supervision of professors <a href='https://www.ics.uci.edu/~sudderth/' target="_blank">Erik Sudderth</a> and <a href='http://www.micheleguindani.info/' target="_blank">Michele Guindani</a>, is on a model for sparse network data with mixed community memberships.</p>
+<p> I am interested in the development and application of Bayesian Nonparametric and machine learning models, especially for clustering, analysis of time series and for the modeling of network data. I am currently working on:
+<ul>
+<li> a model for sparse network data with mixed community memberships; </li>
+<li> a model for clustering longitudinal data, an application of which is to the discovery of subject and brain region clusters using fMRI data; </li>
+<li> rainfall prediction with regression trees and deep learning methods. </li>
+</ul>
+</p>
 
-<p> In light of my varied background, I am enthusiastic about working with researchers in other fields. I have collaborated to academic research in the field of Behavioral Sciences and Earth Sciences and in the future I would love to contribute to projects in the fields of Anthropology, Economics and Sociology. </p>
+<p> In light of my varied background, I am enthusiastic about working with researchers in other fields. So far, I have collaborated to academic research in the field of Behavioral Sciences. In the future, I would love to contribute to data science projects with humanistic and social applications.</p>
 
 ### Refereed publications
 
 #### Statistical methodology
 
-<p> <i class='fa fa-file-alt'></i> &nbsp; **Federica Zoe Ricci**, Michele Guindani, Erik Sudderth. Thinned random measures for sparse graphs with overlapping communities, _Neural Information Processing Systems_ (forthcoming). </p> 
+<p> 
+  <i class='fa fa-file-alt'></i> &nbsp; 
+  <a href="https://drive.google.com/file/d/1AYpYQldhowA2ufsABTdaqjxY2NAOEysp/view?usp=sharing" target="_blank" title="Slides"> 
+    <i class="fa fa-desktop"></i> 
+  </a> &nbsp; 
+  <a href="https://drive.google.com/file/d/1qxl88y9D5Zi0tq3gkmXfHz44VnHaSWct/view?usp=sharing" target="_blank" title="Poster"> 
+    <i class="fa fa-thumbtack"></i> 
+  </a> &nbsp; Thinned random measures for sparse graphs with overlapping communities
+  <br>
+  **Federica Zoe Ricci**, Michele Guindani, Erik Sudderth
+  <br>
+  _Neural Information Processing Systems, 2022 (to appear)_
+</p> 
 
 #### Statistics and data science education
 
-<p> <i class='fa fa-file-alt'></i> &nbsp; Wendy Rummerfield, **Federica Zoe Ricci**, Mine Dogucu (2021). <a href="https://iase-web.org/documents/papers/sat2021/IASE2021%20Satellite%20116_RUMMERFIELD.pdf?1649974209" target="_blank"> Training Graduate Students to Teach Statistics and Data Science from a Distance </a>, _IASE 2021_ </p> 
+<p> 
+  <a href="https://iase-web.org/documents/papers/sat2021/IASE2021%20Satellite%20116_RUMMERFIELD.pdf?1649974209" target="_blank" title="Paper"> <i class='fa fa-file-alt'></i> </a> &nbsp; 
+  Training Graduate Students to Teach Statistics and Data Science from a Distance
+  <br>
+  Wendy Rummerfield, **Federica Zoe Ricci**, Mine Dogucu
+  <br>
+   _International Association for Statistical Education Satellite Conference, 2021_
+</p> 
 
-#### Collaborations in other fields
+#### Collaborations in applied fields
 
-<p> <i class='fa fa-file-alt'></i> &nbsp; Riccardo Migliavada, **Federica Zoe Ricci**, Luisa Torri (2021). <a href="https://www.sciencedirect.com/science/article/pii/S0195666321001100?casa_token=iul1lGSFkBkAAAAA:Pq3OHZh5qvbIAjUzCKffo4jUq1G6TVwwWovyr8I8EX4qi22Zo4-bIoOaKACHWgF5feuLRZXX" target="_blank"> A three-year longitudinal study on the use of pre-ordering in a university canteen </a>, _Appetite_</i> </p>
-
-<p> <i class='fa fa-file-alt'></i> &nbsp; Riccardo Migliavada, **Federica Zoe Ricci**, Francesco Denti, Derenik Haghverdian, Luisa Torri (2022). <a href="https://www.sciencedirect.com/science/article/abs/pii/S0195666322000861" target="_blank"> Is purchasing of vegetable dishes affected by organic or local labels? Empirical evidence from a university canteen </a>, _Appetite_  </p> 
+<p> 
+  <a href="https://www.sciencedirect.com/science/article/abs/pii/S0195666322000861" target="_blank" title="Paper"> <i class='fa fa-file-alt'></i> </a>  &nbsp; 
+  Is purchasing of vegetable dishes affected by organic or local labels? Empirical evidence from a university canteen
+  <br>
+  Riccardo Migliavada, **Federica Zoe Ricci**, Francesco Denti, Derenik Haghverdian, Luisa Torri
+  <br>
+   _Appetite, 2022_
+</p> 
+ 
+ 
+<p> 
+  <a href="https://www.sciencedirect.com/science/article/pii/S0195666321001100?casa_token=iul1lGSFkBkAAAAA:Pq3OHZh5qvbIAjUzCKffo4jUq1G6TVwwWovyr8I8EX4qi22Zo4-bIoOaKACHWgF5feuLRZXX" target="_blank" title="Paper"> <i class='fa fa-file-alt'></i></a>  &nbsp; 
+  A three-year longitudinal study on the use of pre-ordering in a university canteen
+  <br>
+  Riccardo Migliavada, **Federica Zoe Ricci**, Luisa Torri
+  <br>
+   _Appetite, 2021_
+</p> 
 
 ###  Non-refereed work
 
-* _Assisted grading with Gradescope_, Blog post, co-authored with M. Dogucu on <a href='https://www.datapedagogy.com/posts/2021-08-12-assisted-grading-with-gradescope/' target="_blank"> datapedagogy.com </a>
 
-* _Tips and Tools for Asynchronous Class Videos_, co-authored with M. Dogucu and W. Rummerfield, on <a href='https://www.datapedagogy.com/posts/2021-01-08-video-production-tips/
-' target="_blank"> datapedagogy.com </a>
+<p> 
+  <a href="https://github.com/federicazoe/gradetools" target="_blank" title="Code"> <i class='fa fa-code'></i></a>  &nbsp; 
+  <a href="https://federicazoe.github.io/gradetools/" target="_blank" title="Website"> <i class='fa fa-globe'></i></a>  &nbsp; 
+  <a href="https://www.youtube.com/watch?v=ECI4CzkUqak" target="_blank" title="Workshop"> <i class='fa fa-video'></i></a>  &nbsp; 
+  Gradetools: an R package to assist with providing grades and personalized feedback to students 
+  <br>
+  **Federica Zoe Ricci**, Catalina Medina, Mine Dogucu
+  <br>
+   R package and workshop, 2022
+</p>
 
-* _Engaging Students in Remote Classes_, Blog post, co-authored with M. Dogucu and W. Rummerfield, on <a href='https://www.datapedagogy.com/posts/2020-09-10-student-engagement-remote/' target="_blank"> datapedagogy.com </a>
 
-* _A Sticky Hierarchical Pitman-Yor Process as a Prior for Hidden Markov Models_, MSc Thesis, 2019 advised by <a href='http://mypage.unibocconi.it/antoniolijoi/' target="_blank">Antonio Lijoi</a>, <a href='https://www.bayeslab.unibocconi.eu/wps/wcm/connect/Cdr/Bayeslab/Home' target=_blank">Bocconi University</a>
+<p> 
+  <a href="https://www.datapedagogy.com/posts/2021-08-12-assisted-grading-with-gradescope/" target="_blank" title="Blog post"> <i class='fa fa-rss'></i></a>  &nbsp; 
+  Assisted grading with Gradescope
+  <br>
+  **Federica Zoe Ricci**, Mine Dogucu
+  <br>
+   Blog post, 2021
+</p> 
+
+<p> 
+  <a href="https://www.datapedagogy.com/posts/2021-01-08-video-production-tips/" target="_blank" title="Blog post"> <i class='fa fa-rss'></i></a>  &nbsp; 
+  <a href="https://www.datapedagogy.com/posts/2021-01-08-video-production-tips/" target="_blank" title="Blog post"> <i class='fa fa-video'></i></a>  &nbsp; Tips and Tools for Asynchronous Class Videos
+  <br>
+  **Federica Zoe Ricci**, Wendy Rummerfield, Mine Dogucu
+  <br>
+   Blog post, 2021
+</p> 
+
+<p> 
+  <a href="https://www.datapedagogy.com/posts/2020-09-10-student-engagement-remote/" target="_blank" title="Blog post"> <i class='fa fa-rss'></i></a>  &nbsp; 
+  Engaging Students in Remote Classes
+  <br>
+  Wendy Rummerfield, **Federica Zoe Ricci**, Mine Dogucu
+  <br>
+   Blog post, 2020
+</p> 
+
+<p> 
+  <a href="https://drive.google.com/file/d/17KeGEcfSOPOjSyanZd5gefbXjyU-Z9PL/view?usp=share_link" target="_blank" title="MSc Thesis"> <i class='fa fa-pen-nib'></i></a>  &nbsp;
+ A Sticky Hierarchical Pitman-Yor Process as a Prior for Hidden Markov Models
+  <br>
+ MSc Thesis (advised by <a href='http://mypage.unibocconi.it/antoniolijoi/' target="_blank">Antonio Lijoi</a>), 2019
+</p> 
+
 
 
 
