add igier-bidsa training

--- a/cv.Rmd
+++ b/cv.Rmd
@@ -35,6 +35,9 @@ Mentoring Excellence Program [2023]{.date} \
 CITI Basic HRP Course for Social and Behavioral Investigators [2023]{.date} \
 Division of Teaching Excellence and Innovation pedagogical training [2020]{.date}
 
+**Bocconi University** \
+Visiting Student at the IGIER-BIDSA Research Center [2017-2018]{.date} \
+
 ## Publications
 
 ### Statistical methodology
